--- a/f5-bigip_backup.yaml
+++ b/f5-bigip_backup.yaml
@@ -11,7 +11,7 @@
       transport: rest
       validate_certs: no
       no_f5_teem: false
-  gather_facts: true
+  gather_facts: false
   tasks:
     - name: 01-Create a new UCS and Download
       f5networks.f5_modules.bigip_ucs_fetch:
@@ -48,7 +48,7 @@
       delegate_to: localhost
       register: output
     - name: 06-Copy master key to file
-      copy: content="{{ output.stdout[0] }}" dest=./output/{{ backup_file_name }}.key      
+      copy: content="{{ output.stdout[0] }}" dest=./output/{{ backup_file_name }}.key
     - name: 07-Collect all BIG-IP information
       f5networks.f5_modules.bigip_device_info:
         gather_subset:
